수정 - footer, header 고정 시킴

--- a/insta.html
+++ b/insta.html
@@ -38,13 +38,13 @@
     <div class="main">
         <div class="id_line">
             <div class="two_box">
-                 <img id="id_img" src="insta-logo/3v69ujwh96261.jpeg">
-                 <p><strong>winkberry</strong></p>
+                <img id="id_img" src="insta-logo/3v69ujwh96261.jpeg">
+                <p><strong>winkberry</strong></p>
             </div>
             <img id="more_img" src="insta-logo/more@3x.png">
         </div>
         <div id="main_img_box">
-             <img id="main_img" src="insta-logo/christmas.jpeg">
+            <img id="main_img" src="insta-logo/christmas.jpeg">
         </div>
         <div id="like_list">
             <div class="three">
@@ -59,20 +59,21 @@
         <div id="comment">
             <div id="horizen_align">
                 <img src="insta-logo/3v69ujwh96261.jpeg">
-                 <p><strong>winkberry</strong>님 <strong>외 3,371명</strong>이 좋아합니다</p>
+                <p><strong>winkberry</strong>님 <strong>외 3,371명</strong>이 좋아합니다</p>
             </div>
             <p><strong>winkberry</strong> 안녕하세요</p>
             <p>5시간 전</p>
         </div>
     </div>
-    <div id="footer">
-        <img src="insta-logo/home@3x.png">
-        <img src="insta-logo/search@3x.png">
-        <img src="insta-logo/trending@3x.png">
-        <img src="insta-logo/like@3x.png">
-        <img src="insta-logo/home@3x.png">
+    <div id="footer-wrapper">
+        <div id="footer">
+            <img src="insta-logo/home@3x.png">
+            <img src="insta-logo/search@3x.png">
+            <img src="insta-logo/trending@3x.png">
+            <img src="insta-logo/like@3x.png">
+            <img src="insta-logo/home@3x.png">
+        </div>
     </div>
-
 </div>
 
 </body>
